test/e2e/testdata/jwt-backend-remote-jwks.yaml
---
apiVersion: v1
kind: Secret
metadata:
  name: remote-jwks-server-secret
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURuVENDQW9XZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREF0TVJVd0V3WURWUVFLREF4bGVHRnQKY0d4bElFbHVZeTR4RkRBU0JnTlZCQU1NQzJWNFlXMXdiR1V1WTI5dE1CNFhEVEkxTURFd056RXpNVEF5TTFvWApEVE0xTURFd05URXpNVEF5TTFvd1ZqRTFNRE1HQTFVRUF3d3NjbVZ0YjNSbExXcDNhM010YzJWeWRtVnlMbWRoCmRHVjNZWGt0WTI5dVptOXliV0Z1WTJVdGFXNW1jbUV4SFRBYkJnTlZCQW9NRkdWNFlXMXdiR1VnYjNKbllXNXAKZW1GMGFXOXVNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTJFRGFxMXpWaVE1dwpJMGNTVjNJS1lMelRCQ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRRFlRTnFyWE5XSkRuQWoKUnhKWGNncGd2Tk1FQlA2aTBhcFFjbUV1eGt4SXVxd211OVFJblMrVEcweUhHUTQvaUpxNUVBV0Y2RUQyVFBHaQp6MnBQYmZvbjhKMTZwZ1hROXVYMDlqSzRLaC9BU0FYVEY1MnhPWVNIV0p6RWxVM1VxUjhrd3h4MWNaelltNHlXCkFsRjUrajMrRk4rNXBuTTJwKy9Dc0NjNjlWYWw3Nmg0K1hmMkdDVWJoWkw5cGRzMkIwc2VWSDVCNFFvcXdlOHoKTnlUUzNnYzdhWTg0dS9BWWpOb3h1dGpLK0hOeWNNMXA5WERjT2tPNmpiRk5uVldmUEhPZHFVdnpSbVRZTi9TSQp2bnpTbjUwMDl5V25MK [...]
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: remote-jwks-server-ca
  namespace: gateway-conformance-infra
data:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDOzCCAiOgAwIBAgIUYozfdHNlpdxcE7TCuF+wDOrxi9kwDQYJKoZIhvcNAQEL
[...]
    vjYDV/+uv3wEkMby25WT
    -----END CERTIFICATE-----
---
apiVersion: v1
kind: Service
metadata:
  name: remote-jwks-server
  namespace: gateway-conformance-infra
spec:
  selector:
    app: remote-jwks-server
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remote-jwks-server
  namespace: gateway-conformance-infra
  labels:
    app: remote-jwks-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remote-jwks-server
  template:
    metadata:
      labels:
        app: remote-jwks-server
    spec:
      containers:
        - name: remote-jwks-server
          image: envoyproxy/gateway-static-file-server
          imagePullPolicy: IfNotPresent
          args:
            - --port=8443
            - --certPath=/etc/certs
          volumeMounts:
            - name: remote-jwks-server-secret
              mountPath: /etc/certs
      volumes:
        - name: remote-jwks-server-secret
          secret:
            secretName: remote-jwks-server-secret
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: remote-jwks
  namespace: gateway-conformance-infra
spec:
  endpoints:
    - fqdn:
        hostname: 'remote-jwks-server.gateway-conformance-infra'
        port: 443
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: BackendTLSPolicy
metadata:
  name: remote-jwks-btls
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: remote-jwks
  validation:
    caCertificateRefs:
      - name: remote-jwks-server-ca
        group: ''
        kind: ConfigMap
    hostname: remote-jwks-server.gateway-conformance-infra
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: jwt-with-backend-remot-jwks
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: jwt-claim-routing
  jwt:
    providers:
      - name: example
        recomputeRoute: true
        claimToHeaders:
          - claim: sub
            header: x-sub
          - claim: admin
            header: x-admin
          - claim: name
            header: x-name
        remoteJWKS:
          backendRefs:
            - group: gateway.envoyproxy.io
              kind: Backend
              name: remote-jwks
              port: 443
          backendSettings:
            retry:
              numRetries: 3
              perRetry:
                backOff:
                  baseInterval: 1s
                  maxInterval: 5s
              retryOn:
                triggers: ["5xx", "gateway-error", "reset"]
              timeout:
                http:
                  requestTimeout: 5s
          uri: https://remote-jwks-server.gateway-conformance-infra/jwt/jwks.json
          cacheDuration: 300s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jwt-claim-routing
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - backendRefs:
        - kind: Service
          name: infra-backend-v1
          port: 8080
          weight: 1
      matches:
        - headers:
            - name: x-name
              value: John Doe
    - backendRefs:
        - kind: Service
          name: infra-backend-v2
          port: 8080
          weight: 1
      matches:
        - headers:
            - name: x-name
              value: Tom
    # catch all
    - backendRefs:
        - kind: Service
          name: infra-backend-invalid
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
